--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apexcharts": "^4.5.0",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "motion": "^12.9.1",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
