--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@tailwindcss/vite": "^4.1.4",
     "apexcharts": "^4.5.0",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "motion": "^12.9.1",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
@@ -32,6 +36,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "nodemon": "^3.1.10",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
