--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
